imp: improvements and more readability